--- a/game1/index.html
+++ b/game1/index.html
@@ -9,6 +9,10 @@
   </head>
   <body class="body">
     <h1 class="h1">Игра</h1>
+    <h1 class="lvl">Уровень сложности</h1>
+    <h1 class="twelve">12</h1>
+    <h1 class="sixteen">16</h1>
+    <h1 class="twenty">20</h1>
     <div class="con"></div>
     <script type="module" src="main.js"></script>
   </body>
